--- a/webserver-02tut/package.json
+++ b/webserver-02tut/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tut01",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node.js Web Server tutorial",
   "main": "server.js",
   "scripts": {
     "start": "node server",
