--- a/webserver-03tut/package.json
+++ b/webserver-03tut/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
